# voice-kit

./: .gitignore  README.md
prototype/: prototype.md  pyproject.toml
prototype/runtime/: docker-compose.test.yml  docker-compose.yml
prototype/runtime/gateway/: Dockerfile  server.py
prototype/runtime/stt/: Dockerfile  server.py
prototype/runtime/tts/: Dockerfile  server.py
prototype/templates/: voice.config.yaml
prototype/tests/: conftest.py
prototype/tests/integration/: conftest.py  test_stt.py  test_tts.py
prototype/tests/pipeline/: test_pipeline.py
prototype/tests/unit/: test_vad.py
prototype/voicekit/: cli.py  vad.py
prototype/voicekit/providers/: registry.py
prototype/voicekit/providers/llm/: simulated.py
prototype/voicekit/providers/stt/: simulated.py
prototype/voicekit/providers/tts/: simulated.py
ui-test/: app.js  index.html  style.css
voicekit/: TESTING.md  flow.md  pyproject.toml
voicekit/docs/: STREAMING_ARCHITECTURE.md  phase1.md  phase2.md
voicekit/runtime/: docker-compose.yml
voicekit/runtime/gateway/: Dockerfile  config.py  dependencies.py  main.py  remote_pipeline.py
voicekit/runtime/gateway/routes/: health.py  session.py
voicekit/runtime/gateway/services/: ping.py  session.py
voicekit/runtime/stt/: Dockerfile  server.py
voicekit/runtime/tts/: Dockerfile  server.py
voicekit/templates/: voice.config.yaml
voicekit/tests/: test_voice.py
voicekit/tests/fixtures/: speech.raw
voicekit/tests/integration/: test_streaming.py  test_stt.py  test_tts.py
voicekit/tests/pipeline/: test_pipeline.py
voicekit/tests/unit/: test_config.py  test_vad.py
voicekit/voicekit/: config.py  pipeline.py  vad.py
voicekit/voicekit/providers/: base.py  registry.py
voicekit/voicekit/providers/llm/: claude.py
voicekit/voicekit/utils/: phrase_splitter.py  text_cleaner.py
(+3 files in other folders)
